data/paper_artifacts/deepseek_v4_pro_ohos10_0613_harness_fixed_v2/projects/common__89d5ecaafdff/.c2r_bindgen_extern/audio_dma_base_91cefae6.externs.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub type size_t = ::core::ffi::c_uint;
pub const LOG_TYPE_MIN: LogType = 0;
pub const LOG_INIT: LogType = 1;
pub const LOG_CORE: LogType = 3;
pub const LOG_TYPE_MAX: LogType = 4;
pub type LogType = ::core::ffi::c_uint;
pub const LOG_DEBUG: LogLevel = 3;
pub const LOG_INFO: LogLevel = 4;
pub const LOG_WARN: LogLevel = 5;
pub const LOG_ERROR: LogLevel = 6;
pub const LOG_FATAL: LogLevel = 7;
pub type LogLevel = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn HiLogPrint(
        type_: LogType,
        level: LogLevel,
        domain: ::core::ffi::c_uint,
        tag: *const ::core::ffi::c_char,
        fmt: *const ::core::ffi::c_char,
        ...
    ) -> ::core::ffi::c_int;
}
pub const DEVICE_CLASS_DEFAULT: DeviceClass = 1;
pub const DEVICE_CLASS_PLAT: DeviceClass = 2;
pub const DEVICE_CLASS_SENSOR: DeviceClass = 4;
pub const DEVICE_CLASS_INPUT: DeviceClass = 8;
pub const DEVICE_CLASS_DISPLAY: DeviceClass = 16;
pub const DEVICE_CLASS_AUDIO: DeviceClass = 32;
pub const DEVICE_CLASS_CAMERA: DeviceClass = 64;
pub const DEVICE_CLASS_USB: DeviceClass = 128;
pub const DEVICE_CLASS_USERAUTH: DeviceClass = 256;
pub const DEVICE_CLASS_HIMEDIACOMM: DeviceClass = 512;
pub const DEVICE_CLASS_MAX: DeviceClass = 1024;
pub type DeviceClass = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfObject {
    pub objectId: i32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfSBuf {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfDeviceObject {
    pub service: *mut IDeviceIoService,
    pub property: *const DeviceResourceNode,
    pub deviceClass: DeviceClass,
    pub priv_: *mut ::core::ffi::c_void,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfDeviceIoClient {
    pub device: *mut HdfDeviceObject,
    pub priv_: *mut ::core::ffi::c_void,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IDeviceIoService {
    pub object: HdfObject,
    pub Open: ::core::option::Option<unsafe extern "C" fn(client: *mut HdfDeviceIoClient) -> i32>,
    pub Dispatch: ::core::option::Option<
        unsafe extern "C" fn(
            client: *mut HdfDeviceIoClient,
            cmdId: ::core::ffi::c_int,
            data: *mut HdfSBuf,
            reply: *mut HdfSBuf,
        ) -> i32,
    >,
    pub Release: ::core::option::Option<unsafe extern "C" fn(client: *mut HdfDeviceIoClient)>,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct DeviceResourceAttr {
    pub name: *const ::core::ffi::c_char,
    pub value: *const ::core::ffi::c_char,
    pub next: *mut DeviceResourceAttr,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct DeviceResourceNode {
    pub name: *const ::core::ffi::c_char,
    pub hashValue: u32,
    pub attrData: *mut DeviceResourceAttr,
    pub parent: *mut DeviceResourceNode,
    pub child: *mut DeviceResourceNode,
    pub sibling: *mut DeviceResourceNode,
}
unsafe extern "C" {
    pub fn OsalMemCalloc(size: size_t) -> *mut ::core::ffi::c_void;
}
unsafe extern "C" {
    pub fn OsalMemFree(mem: *mut ::core::ffi::c_void);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioMixerControl {
    pub min: u32,
    pub max: u32,
    pub platformMax: i32,
    pub mask: u32,
    pub reg: u32,
    pub rreg: u32,
    pub shift: u32,
    pub rshift: u32,
    pub invert: u32,
    pub value: u32,
}
pub const AUDIO_RSET_GROUP: AudioRegOpsType = 0;
pub const AUDIO_INIT_GROUP: AudioRegOpsType = 1;
pub const AUDIO_CTRL_PATAM_GROUP: AudioRegOpsType = 2;
pub const AUDIO_CTRL_PATAM_MUX_GROUP: AudioRegOpsType = 3;
pub const AUDIO_CTRL_SAPM_PATAM_GROUP: AudioRegOpsType = 4;
pub const AUDIO_CTRL_SAPM_PATAM_MUX_GROUP: AudioRegOpsType = 5;
pub const AUDIO_DAI_STARTUP_PATAM_GROUP: AudioRegOpsType = 6;
pub const AUDIO_DAI_PATAM_GROUP: AudioRegOpsType = 7;
pub const AUDIO_DAI_TRIGGER_GROUP: AudioRegOpsType = 8;
pub const AUDIO_CTRL_CFG_GROUP: AudioRegOpsType = 9;
pub const AUDIO_SAPM_COMP_GROUP: AudioRegOpsType = 10;
pub const AUDIO_SAPM_CFG_GROUP: AudioRegOpsType = 11;
pub const AUDIO_GROUP_MAX: AudioRegOpsType = 12;
pub type AudioRegOpsType = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioIdInfo {
    pub chipName: *const ::core::ffi::c_char,
    pub chipIdRegister: u32,
    pub chipIdSize: u32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioControlConfig {
    pub arrayIndex: u16,
    pub iface: u16,
    pub type_: u16,
    pub enable: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioAddrConfig {
    pub addr: u32,
    pub value: u32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioSapmCtrlConfig {
    pub sapmType: u8,
    pub compNameIndex: u16,
    pub reg: u32,
    pub mask: u32,
    pub shift: u8,
    pub invert: u8,
    pub kcontrolNews: u32,
    pub kcontrolsNum: u32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioEnumCtrlConfig {
    pub reg: u32,
    pub reg2: u32,
    pub shiftLeft: u8,
    pub shiftRight: u8,
    pub max: u32,
    pub mask: u32,
    pub texts: u32,
    pub values: u32,
    pub sapm: u32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioRegCfgGroupNode {
    pub itemNum: u8,
    pub groupIndex: AudioRegOpsType,
    pub addrCfgItem: *mut AudioAddrConfig,
    pub regCfgItem: *mut AudioMixerControl,
    pub regEnumCfgItem: *mut AudioEnumCtrlConfig,
    pub ctrlCfgItem: *mut AudioControlConfig,
    pub sapmCompItem: *mut AudioSapmCtrlConfig,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioRegCfgData {
    pub audioIdInfo: AudioIdInfo,
    pub audioRegParams: [*mut AudioRegCfgGroupNode; 12usize],
}
unsafe extern "C" {
    pub fn AudioGetRegConfig(
        device: *const HdfDeviceObject,
        configData: *mut AudioRegCfgData,
    ) -> i32;
}
